--- a/.github/workflows/test-from-sources.yml
+++ b/.github/workflows/test-from-sources.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 8
       matrix:
         python-version: [3.9, 3.8, 3.7, 3.6]
-        os: [ubuntu-latest, macos-latest]
+        os: [windows-latest]
         exclude:
           - os: macos-latest
             python-version: 3.6
@@ -30,6 +30,12 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install libusb
+    - name: Install system dependancies (windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        curl.exe https://github.com/libusb/libusb/releases/download/v1.0.23/libusb-1.0.23.7z -FileName libusb.7z
+        7z x libusb.7z
+        
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
