--- a/.github/workflows/test-from-sources.yml
+++ b/.github/workflows/test-from-sources.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 8
       matrix:
         python-version: [3.9, 3.8, 3.7, 3.6]
-        os: [windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         exclude:
           - os: macos-latest
             python-version: 3.6
@@ -34,7 +34,6 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: |
         vcpkg install libusb
-        
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
@@ -43,7 +42,7 @@ jobs:
     - name: Run unit tests and module doctests
       run: |
         pip install pytest
-        XDG_RUNTIME_DIR=.tests_rundir pytest
+        pytest
     - name: Install and run the resulting executable
       run: |
         pip install .
