--- a/.github/workflows/test-from-sources.yml
+++ b/.github/workflows/test-from-sources.yml
@@ -40,6 +40,12 @@ jobs:
         python setup.py egg_info
         pip install -r liquidctl.egg-info/requires.txt
     - name: Run unit tests and module doctests
+      if: matrix.os != 'windows-latest'
+      run: |
+        pip install pytest
+        XDG_RUNTIME_DIR=.tests_rundir pytest
+    - name: Run unit tests and module doctests
+      if: matrix.os == 'windows-latest'
       run: |
         pip install pytest
         pytest
