--- a/.github/workflows/test-from-sources.yml
+++ b/.github/workflows/test-from-sources.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       max-parallel: 8
       matrix:
-        python-version: [3.9, 3.8, 3.7, 3.6]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.8]
+        os: [windows-latest]
         exclude:
           - os: macos-latest
             python-version: 3.6
@@ -30,28 +30,36 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install libusb
-    - name: Install system dependancies (windows)
+    - name: Install system dependencies (Windows)
       if: matrix.os == 'windows-latest'
       run: |
         vcpkg install libusb
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools
         python setup.py egg_info
         pip install -r liquidctl.egg-info/requires.txt
-    - name: Run unit tests and module doctests
+    - name: Run unit tests and module doctests (not windows)
       if: matrix.os != 'windows-latest'
       run: |
         pip install pytest
         XDG_RUNTIME_DIR=.tests_rundir pytest
-    - name: Run unit tests and module doctests
+    - name: Run unit tests and module doctests (windows)
       if: matrix.os == 'windows-latest'
       run: |
         pip install pytest
         pytest
     - name: Install and run the resulting executable
+      if: matrix.os != 'windows-latest'
       run: |
         pip install .
+        liquidctl list --verbose --debug
+    - name: Install and run the resulting executable (windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        python setup.py install
+        python -m pip install pyinstaller
+        pyinstaller --add-data MS64\dll\*;. --clean -F liquidctl\cli.py --name liquidctl --onefile --icon extra\windows\liquidctl_logo_v1_circle_256.ico --distpath .
         liquidctl list --verbose --debug
     - name: Lint with flake8
       run: |
