--- a/.github/workflows/test-from-sources.yml
+++ b/.github/workflows/test-from-sources.yml
@@ -59,6 +59,8 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: |
         python setup.py install
+        python -m pip install pyinstaller
+        pyinstaller --add-data MS64\dll\*;. --clean -F liquidctl\cli.py --name liquidctl --onefile --icon extra\windows\liquidctl_logo_v1_circle_256.ico --distpath 
         liquidctl list --verbose --debug
     - name: Lint with flake8
       run: |
