--- a/.github/workflows/test-from-sources.yml
+++ b/.github/workflows/test-from-sources.yml
@@ -3,6 +3,23 @@ name: tests
 on: [push, pull_request]
 
 jobs:
+  lint:
+    runs-on: 'ubuntu-latest'
+    env:
+      python-version: 3.8
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up Python ${{ python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Lint with flake8
+        run: |
+          pip install flake8
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
   build:
 
     runs-on: ${{ matrix.os }}
@@ -60,12 +77,6 @@ jobs:
       run: |
         python setup.py install
         python -m pip install pyinstaller
-        pyinstaller --add-data MS64\dll\*;. --clean -F liquidctl\cli.py --name liquidctl --onefile --icon extra\windows\liquidctl_logo_v1_circle_256.ico --distpath 
+        pyinstaller --add-data C:\Windows\System32 VS2019/MS64/dll/*;.  -F liquidctl\cli.py --name liquidctl --onefile --icon extra\windows\liquidctl_logo_v1_circle_256.ico --distpath 
         liquidctl list --verbose --debug
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+
