--- a/.github/workflows/test-from-sources.yml
+++ b/.github/workflows/test-from-sources.yml
@@ -73,7 +73,7 @@ jobs:
         liquidctl list --verbose --debug
     - name: Install and run the resulting executable (windows)
       if: matrix.os == 'windows-latest'
-      shell: pwsh
+      shell: cmd
       run: |
         python setup.py install
         python -m pip install pyinstaller
