--- a/.github/workflows/test-from-sources.yml
+++ b/.github/workflows/test-from-sources.yml
@@ -77,6 +77,6 @@ jobs:
       run: |
         python setup.py install
         python -m pip install pyinstaller
-        pyinstaller  --clean -F liquidctl\cli.py --name liquidctl --onefile --icon extra\windows\liquidctl_logo_v1_circle_256.ico --distpath . --add-data C:\Windows\System32 VS2019/MS64/dll/*;. 
+        pyinstaller --add-data MS64\dll\*;. --clean -F liquidctl\cli.py --name liquidctl --onefile --icon extra\windows\liquidctl_logo_v1_circle_256.ico --distpath .
         liquidctl list --verbose --debug
 
