--- a/.github/workflows/test-from-sources.yml
+++ b/.github/workflows/test-from-sources.yml
@@ -78,5 +78,5 @@ jobs:
         python setup.py install
         python -m pip install pyinstaller
         pyinstaller --add-data MS64\dll\*;. --clean -F liquidctl\cli.py --name liquidctl --onefile --icon extra\windows\liquidctl_logo_v1_circle_256.ico --distpath .
-        liquidctl list --verbose --debug
+        python -m liquidctl.cli list --verbose --debug
 
